syntax = "proto3";

package MMORPG.Common.Proto.Base;

message NetVector3 {
    int32 x = 1;
    int32 y = 2;
    int32 z = 3;
}