syntax = "proto3";

package Common.Proto.Player;
import "Entity/NetEntity.proto";

message NetCharacter {
    Entity.NetEntity entity = 1;
    string name = 2;
    int32 space_id = 3;
    int32 level = 4;

    int32 character_id = 5;
    int32 job_id = 6;
    int64 exp = 7;
    int64 gold = 8;
    int32 hp = 9;
    int32 mp = 10;
}
